--- a/src/Game.Client/_Imports.razor
+++ b/src/Game.Client/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using Game.Client
 @using Game.Client.Layout
+@using Game.Client.Components
+@using Game.Client.Services
+@using Game.Shared.Models
